<resources>
    <string name="app_name">flashcards_client</string>
    <string name="action_settings">Settings</string>
    <string name="progress">Progress</string>
    <string name="enter_the_solution">Enter the solution</string>
    <string name="check">Check</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="answer">Answer: %s</string>
</resources>
